<resources>
    <string name="app_name">金舟录屏大师</string>
    <string name="logo_title_name">登录</string>
    <string name="file_title_name">我的视频</string>
    <string name="setting_title_name">设置</string>
    <string name="home_title_name">金舟录屏大师</string>
    <string name="permission">权限设置</string>
    <string name="about_us">关于我们</string>
    <string name="frequent_question">常见问题</string>
    <string name="click_operate">点击操作</string>
    <string name="tutorial">使用教程</string>
    <string name="company">江下信息科技（惠州）有限公司版权所有</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="UserAgreementTitle">金舟录屏大师安装许可协议</string>
    <string name="UserAgreementText1">
        金舟录屏大师是由江下信息科技（惠州）有限公司（即江下科技）提供的工具型移动软件。在安装金舟录屏大师之前，用户应仔细阅读本安装许可协议（本“协议”）。
        本协议规定了金舟录屏大师的使用条款和条件，适用于您对金舟录屏大师的使用，包括您可能获得的金舟录屏大师的任何版本，以及随附的文档。通过接受此协议
        （例如，在提示时单击“我接受”按钮，或通过访问或使用金舟录屏大师）可以表明您接受：（i）表示您已阅读，理解并同意本协议中规定的所有条款和条件的约束，
        包括隐私政策中规定的信息的收集和使用; （ii）保证您至少有十八岁并且具有签订合同的法律行为能力。或者，您同意受这些条款和条件的约束，但不限于下载，安装，复制或使用金舟录屏大师。
        江下科技只有在您接受本协议条款的明确条件下才愿意为您提供金舟录屏大师。如果您未能完全接受本协议的条款，则您无权出于任何目的使用金舟录屏大师软件，并且无要求本协议任何条款的权益。
        任何违反（违反）本协议任何条款的金舟录屏大师的使用均不得被允许。</string>
    <string name="UserAgreementText2">1.定义</string>
    <string name="UserAgreementText3">就本协议而言，以下条款具有以下含义：</string>
    <string name="UserAgreementText4">1.1“金舟录屏大师”是指在下文中提供给您的软件产品（仅限目标代码格式），以及其任何更新或升级，何时以及如何提供服务。</string>
    <string name="UserAgreementText5">1.2“服务”是指金舟录屏大师为您提供访问的各种服务，如网站，搜索服务，个性化内容以及通过其可通过任何服务访问的服务网络的品牌产品现在已知或以后开发的各种介质或设备。</string>
    <string name="UserAgreementText6">1.3“第三方软件”是指金舟录屏大师提供的某些第三方的软件，包括但不限于某些第三方和独立开发者的小部件。</string>
    <string name="UserAgreementText7">1.4“使用”是指使移动设备根据本协议的条款和条件执行金舟录屏大师的任何机器可执行部分。</string>
    <string name="UserAgreementText8">1.5“用户”指订购或下载金舟录屏大师和/或激活服务的法人或个人。</string>
    <string name="UATitle2">2.仅限个人非商业用途</string>
    <string name="UAContent2.1">2.1金舟录屏大师由江下科技授权给您，而不是出售给您。在遵守本协议的条款和条件的前提下，江下科技特此授予您有限的，非独占的，不可转让的，不可再授权的许可，仅可将金舟录屏大师的一份副本用于个人非商业目的，并提供这种非商业用途的金舟录屏大师。 江下科技还为用户提供安装，卸载和相关数据服务，这意味着根据本协议的条款和条件，您可以独立选择安装，卸载和使用金舟录屏大师以及任何和江下科技提供的所有相关数据服务。 江下科技可能偶尔会为金舟录屏大师提供更新和升级，更新和升级是为了应用可用。您可以仅以非商业方式复制和分发金舟录屏大师。您同意尽最大努力防止和保护金舟录屏大师和Services的内容，防止未经授权的披露或使用。 江下科技及其许可方保留所有权利，包括但不限于所有权和知识产权及未明确授予您的权利。 江下科技的许可方是本协议的预期第三方受益人，并有明确的权利依赖并直接执行此处规定的条款。 江下科技根据本协议未授予任何默示许可。除上述规定外，您无权使用本软件。</string>
    <string name="UAContent2.2">2.2禁止任何与商业活动相关的商业用途，销售，复制，分发或任何其他行为，包括但不限于金舟录屏大师软件的预安装或绑定，除非此类个人已获得江下科技的事先书面批准。</string>
    <string name="UAContent2.3">2.3在使用金舟录屏大师软件之前，您必须仔细阅读并遵守本协议的条款和条件以及所有相关的江下科技政策，包括但不限于江下科技隐私政策。</string>
    <string name="UAContent2.4">2.4使用限制。您应确保您不会（也可能不会导致或允许任何第三方）采取任何行为或未能以任何方式实施任何导致损害或干扰任何江下科技服务的行为，并且不得进行，授权援助或教唆任何第三方进行以下任何活动：（i）使用加速服务，除非本协议的条款和条件明确允许; （ii）将金舟录屏大师的组件程序分开，以便在不同的设备上使用; （iii）改编，更改，公开展示，公开表演，翻译，嵌入任何其他产品，或以其他方式创建金舟录屏大师或Services的衍生作品或以其他方式修改; （iv）将加速服务再许可，租赁，出租，贷款或分发给任何第三方; （v）将金舟录屏大师或Services转让给任何第三方; （vi）逆向工程，反编译，反汇编或以其他方式尝试推导加速工具的源代码，（a）除非适用法律允许，或（b）仅在调试任何第三方变更所需的范围内由金舟录屏大师链接的LGPL库; （vi）删除，更改或隐藏加速服务上的任何商标，徽标，版权或其他所有权声明，图例，符号或标签，或因此适用的文件; （vii）允许第三方访问或使用金舟录屏大师或Services，包括但不限于在任何应用服务提供商环境，服务机构或分时安排中的任何使用; （viii）阻止，禁用或以其他方式影响任何广告，广告横幅窗口，指向其他网站和服务的链接，或构成加速服务不可分割部分的其他功能;或（ix）修改，改编或翻译金舟录屏大师或创建金舟录屏大师的任何衍生作品。未经江下科技事先书面批准，您不得将任何金舟录屏大师或Services的任何性能或功能评估结果发布给任何第三方。无论何时或何地发生任何此类违规行为，您都应对江下科技在法律最大范围内采取的任何和所有损害，罚款，成本和费用承担法律责任，并且江下科技应有权通过行使其合法权利向您寻求合法，公平和行政补救，并在法律的最大范围内对您实施法律补救措施。</string>
    <string name="UAContent2.5">2.5您承认第三方软件受此类第三方软件单独条款和条件的约束。本协议中包含的许可限制不适用于第三方软件，只要它们与此类第三方软件条款不一致。江下科技不对任何第三方软件负责。</string>
    <string name="UAContent2.6">2.6江下科技保留在通知或不通知的情况下随时修改或暂时或永久终止服务（或其任何部分）的权利。您同意并承认，对于服务的任何修改，暂停或终止，江下科技不对您或任何第三方承担任何责任。</string>
    <string name="UATitle3">3.知识产权保护</string>
    <string name="UAContent3.1">3.1金舟录屏大师受国际版权公约，中华人民共和国著作权法和所有其他适用知识产权法律法规的保护。与金舟录屏大师相关的所有知识产权（定义如下）均由江下科技拥有，并且是江下科技的专有财产，无论原始或其他副本随后可能存在的形式或媒体如何。本许可证不是原件或任何后续副本的销售。您承认服务和金舟录屏大师，包括但不限于金舟录屏大师的顺序，结构，组织，源代码和适用文档包含江下科技及其供应商的宝贵商业秘密和其他知识产权，并被视为江下科技的机密信息，并承认金舟录屏大师和服务及其中的所有知识产权是江下科技的专有财产。</string>
    <string name="UAContent3.2">3.2您不得恶意或故意修改，复制或传播与金舟录屏大师相关的资料。如果您通过复制，修改或传输金舟录屏大师或任何相关的江下科技服务而对他人或江下科技的图像造成损害，那么您将承担所有相应的损害费用和罚款。您不得删除，隐藏或更改江下科技的版权声明，注册商标或任何其他声明。 江下科技拥有金舟录屏大师的所有副本，无论如何制作。本协议中的任何内容均不得视为以暗示，禁止反言或其他方式授予江下科技任何现有或未来专利的许可，除非您根据本协议明确允许使用加速服务协议。</string>
    <string name="UATitle4">4.期限和终止</string>
    <string name="UAContent4.1">4.1本协议的期限将在您下载金舟录屏大师和/或您启动服务时开始，除非在第4节中提前终止，否则将永久保留。本协议将在您违反本协议时立即终止，除非此类违约行为可以解决，并且在江下科技向您发出违约通知后，您实际上立即得到了解决。本协议终止后，您应停止使用金舟录屏大师和/或服务，及时销毁或销毁金舟录屏大师及其任何副本，并应江下科技的要求，以书面形式向江下科技证明Apps Studio发生了此类破坏。除了江下科技可用的任何其他补救措施之外，这些补救措施是累积性的。第1,2,3,5,6,7和8节将在终止后继续存在。</string>
    <string name="UATitle5">5.免责声明和特别公告</string>
    <string name="UAContent5.1">5.1就江下科技而言，江下科技表示金舟录屏大师不包含任何病毒或其他恶意代码。尽管对金舟录屏大师进行了全面测试，但无法完全保证与所有软件，硬件和操作系统的完全兼容性。如果不兼容，您可以通过电子邮件向江下科技报告此类问题，请求技术支持。如果无法解决不兼容问题，您可以直接从“设置”中的“应用”卸载金舟录屏大师。 金舟录屏大师被认为仅与Android系统7.0及更高版本的移动设备兼容。</string>
    <string name="UAContent5.2">5.2由于金舟录屏大师可以通过互联网下载和传输，因此江下科技无法保证从第三方网站或其他未由江下科技直接发布的媒体下载的金舟录屏大师版本是否可能不是感染了由特洛伊木马程序或其他黑客软件安装的计算机病毒或恶意代码。 江下科技对以这种方式或从此类来源下载金舟录屏大师后的任何直接或间接损失不承担任何责任。</string>
    <string name="UAContent5.3">5.3无保证。您理解并同意您有权（但没有义务）下载和使用金舟录屏大师。您同意加速服务“按原样”提供，并且江下科技及其许可方不对加速工具或服务做出任何其他保证，包括但不限于不间断使用，准确性和数据丢失。 江下科技及其许可方不承担任何其他明示或暗示的保证，包括但不限于对适销性，非侵权性，适用于特定用途或使用的暗示保证（即使江下科技知道或应该知道这些保证）用途或用途），准确性或完整性，满意的质量或常规使用，或由法规，法律，交易的过程，贸易的使用或其他方式产生的其他保证或条件;和金舟录屏大师或服务，他们的使用或任何无法使用他们，他们的使用和本协议的结果有关。此处所有此类默示担保均不承担任何责任，此类免责声明在法律允许的最大范围内有效。 江下科技不保证：（i）金舟录屏大师将满足您的要求或期望;或（ii）访问加速工具将是不间断的，及时的，安全的，无错误的，或者它们的速度提升服务不包含任何病毒。本担保免责声明是您与江下科技之间的基础的基础元素。江下科技及其许可方也不保证江下科技速度提升服务或任何使用结果不会出现缺陷，错误或病毒，可靠或无法在不受破坏的基础上运行或在特定环境中运行或出现错误如果有的话，将被更正。</string>
    <string name="UAContent5.4">5.4在信息技术行业共享的通用实践和指南的限制范围内，江下科技可能会记录和使用您的信息和行为。通过下载，安装和/或使用金舟录屏大师，您同意并理解江下科技可能会收集和使用您的某些非个人信息，以便为您提供更准确和目标明确的服务。除非法律要求或政府部门要求，否则江下科技不会向任何第三方提供有关您的任何信息。</string>
    <string name="UAContent5.5">5.5发送到江下科技的任何通信都是江下科技或其附属公司的财产。除非此处另有说明，否则提交的内容不属于机密，江下科技对提交内容的任何使用或披露不承担任何责任。除非此处另有说明，否则江下科技有权出于任何目的无限制地使用任何提交内容，而无需向提交提供商提供任何补偿。</string>
    <string name="UAContent5.6">5.6责任限制。在法律允许的最大范围内，江下科技及其许可方不对任何类型的损害承担责任（包括对业务中断，数据丢失，利润损失或类似情况的无限制损害），无论是合同还是侵权行为由本协议引起的（包括疏忽）或任何其他法律或公平理论，包括但不限于任何间接，间接，特殊，惩戒或附带的损害，即使江下科技已被告知此类损害的可能性。您同意，您有权保护您的数据，通过定期备份或其他方式，与金舟录屏大师或服务相关联使用。除了江下科技的疏忽引起的死亡或个人伤害仅适用于适用法律范围，禁止在其他情况下限制损害赔偿。尽管本协议规定的任何有限补救措施的基本目的均未实施，但此责任限制仍将适用。在任何情况下，江下科技的任何供应商都不对您根据本协议承担任何责任。这种责任限制是您和江下科技之间的基础的基本要素。</string>
    <string name="UAContent5.7">5.7禁令救济。您承认并同意，您的违反或威胁违反本协议将导致江下科技无法挽回的损害，因为对于这些损害，赔偿金的损失将是不充分的，因此江下科技可以获得及时的禁令救济以保护其在本协议下的权利。法律或衡平法中提供的任何和所有其他补救措施。</string>
    <string name="UATitle6">6.机密性</string>
    <string name="UAContent6.1">“机密信息”是指金舟录屏大师和服务以及向您披露的所有其他信息，即江下科技在披露时以书面形式或口头形式表示机密，除了您可以证明的信息：（a）是以前合理地告知您，不受披露限制; （b）在相关行业或公共领域中通常为人所知的行为或不行为; （c）由第三方作为权利而无限制披露向您披露;（d）由您独立开发，无法访问机密信息。您应尽最大努力在本协议期限内以及本协议终止后至少3年内始终保护和保护机密信息的机密性，但是，您提供的是任何源代码应永久保密。未经江下科技事先书面许可，您不得向任何个人，公司，公司或其他第三方披露，传播或以其他方式发布或传播机密信息。除了在本协议允许的活动过程中，您不得使用任何机密信息。您应在发现未经授权使用或披露保密信息或任何其他违反本协议的行为后立即以书面形式通知江下科技，并将以合理的方式与江下科技合作，以重新获得保密信息并防止任何进一步的未经授权使用。如果您在法律上被迫披露任何机密信息，那么，在此类披露之前，您将（i）在此类披露之前立即通知江下科技，以使江下科技有机会对披露提出质疑，（ii）断言保密信息的特权和机密性质，以及（iii）与江下科技充分合作，以防止任何此类披露和/或获得保护性命令，从而缩小此类披露和/或机密信息的使用范围。如果未获得此类保护，您应仅在符合适用法律要求的必要范围内披露机密信息。</string>
    <string name="HiddenPolicyTitle"> 金舟录屏大师隐私政策</string>
    <string name="HiddenPolicyText"> 更新日期：2020年11月11日</string>
    <string name="HiddenPolicyText2">金舟录屏大师是由江下信息科技（惠州）有限公司（即江下科技）拥有的移动软件。在使用金舟录屏大师之前，用户应仔细阅读隐私条款，
        您继续使用代表您已阅读并同意本隐私条款的各项内容。本条款详细说明了获取了用户哪些信息，获取的信息用于什么功能等，以便用户理解其数据上传下载过程的安全性和可靠性。</string>
    <string name="HiddenPolicyText3">1. 前言</string>
    <string name="HiddenPolicyText4"> 金舟录屏大师收集的用户权限等信息均为保证App的正常功能所必需，绝不会用于商业用途，请放心使用。</string>
    <string name="HiddenPolicyText5"> 2. 应用收集的信息</string>
    <string name="HiddenPolicyText6"> 2.1 个人信息</string>
    <string name="HiddenPolicyText7"> 我们不收集您的个人地址、邮箱、通话记录、通讯录、短信、日程、账号等个人信息；也未收集包括您使用应用、服务或网站时用来识别您或别人的相关信息。
        所以不存在您的这些个人信息被披露的情况。 为了改善用户体验和优化产品性能，我们会收集某些日志、设备、权限及对应功能信息。此类信息以下的2.2-2.4会进行详细解释说明。</string>
    <string name="HiddenPolicyText8"> 2.2 网络日志信息</string>
    <string name="HiddenPolicyText9"> 您使用我们的产品和服务时，我们可能通过WEB日志或某些程序软件自动收集某些信息并存储在我们的服务器日志中。此类信息可能包括：对产品和服务的详细使用情况，如您应用程序的打开时间、使用时长、访问的页面地址等；
        设备事件信息，例如崩溃、系统活动等信息；IP地址；您所在的时区等。</string>
    <string name="HiddenPolicyText10"> 2.3 您的设备信息</string>
    <string name="HiddenPolicyText11"> 为了能够正常向您提供垃屏幕录制，声音录制，直播推流，视频编辑，图片编辑，等功能，我们会收集您的相关设备信息，这些信息包括：
        （1）设备属性：手机型号，安卓系统版本，网络类型，屏幕分辨率，屏幕尺寸，电池电量，可用存储空间，应用和文件名称及类型，当前应用版本号等信息；
        （2）设备序列号或其他设备标识符：如国际移动设备身份码IMEI、网络设备硬件地址、广告标识符IDFA等设备序列号、唯一身份标识符等；
        （3）设备信号：您使用设备的网络状态信息等。 江下科技承诺，我们所收集和处理的前述数据以实现软件功能为目的，不会涉及非法获取用户隐私数据的情况。江下科技仅在征得用户同意或法律明确规定的范围内同第三方共享数据，否则江下科技不会向任何第三方提供用户相关数据。</string>
    <string name="HiddenPolicyText12"> 2.4 权限信息及其对应功能点</string>
    <string name="HiddenPolicyText13"> 金舟录屏大师包含的权限及其对应功能点：获取存储权限(WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE)用于保存录制的视频及编辑后的视频；获取录音权限(RECORD_AUDIO)用于录制视频或直播时录制声音；
        获取网络状态权限(INTERNET)用于登录；获取通知权限用于发送重要通知；获取电量权限(BATTERY_STATS)用于判断电量低时的录制调整；获取手机状态权限（READ_PHONE_STATE）和位置权限（ACCESS_COARSE_LOCATION，ACCESS_FINE_LOCATION）用于显示第三方赞助商提供的内容；
        获取请求安装包权限用于用户下载安装包后请求安装应用。若您拒绝我们获取功能需要的敏感权限，我们可能无法继续为您提供相对应的服务，也不再处理您相应的信息。</string>
    <string name="HiddenPolicyText14"> 3. 功能点及其对应权限</string>
    <string name="HiddenPolicyText15"> 3.1 录屏功能。此功能是金舟录屏大师的核心功能，金舟录屏大师使用此功能需要用到手机录像权限，用于屏幕录制、需要读写存储设备权限，用于录制的视频存储，需要麦克风权限，用于声音录制。若用户拒绝上述权限，用户可能无法正常使用金舟录屏大师。</string>
    <string name="HiddenPolicyText16"> 3.2 分享功能。用户在录制完成之后直接分享到各大社交平台，也可以通过蓝牙分享到其他手机。此功能需要用到蓝牙权限用于蓝牙分享。</string>
    <string name="HiddenPolicyText17"> 3.3 其他功能。应用升级更新需要用到应用安装权限，支付需要获取用户是否安装应用（微信、支付宝）权限，悬浮窗摇一摇需要用到震动权限，数据统计分析需要网络、手机基本信息等权限。</string>
    <string name="HiddenPolicyText18"> 4. 保护用户信息</string>
    <string name="HiddenPolicyText19"> 金舟录屏大师制定了严格的用户上传信息处理规则和安全保护措施来确保不超越目的和范围收集用户信息，确保用户上传信息的安全，确保用户上传信息不被滥用。</string>
    <string name="HiddenPolicyText20"> 4.1 征得授权同意的例外。在以下情形中，我们及合作方收集、使用个人信息无需获得您的授权同意：</string>
    <string name="HiddenPolicyText21">(1) 与国家安全、国防安全有关的；</string>
    <string name="HiddenPolicyText22">(2) 与公共安全、公共卫生、重大公共利益有关的；</string>
    <string name="HiddenPolicyText23">(3) 与犯罪侦查、起诉、审判和判决执行等有关的；</string>
    <string name="HiddenPolicyText24">(4) 出于维护个人信息主体或其他个人的生命、财产等重大合法权益但又很难得到本人同意的；</string>
    <string name="HiddenPolicyText25">(5) 所收集的个人信息是个人信息主体自行向社会公众公开的；</string>
    <string name="HiddenPolicyText26">(6) 从合法公开披露的信息中收集的您的个人信息的，如合法的新闻报道、政府信息公开等渠道；</string>
    <string name="HiddenPolicyText27">(7) 根据您的要求签订合同所必需的；</string>
    <string name="HiddenPolicyText28">(8) 用于维护所提供的产品与/或服务的安全稳定运行所必需的，例如发现、处置产品与/或服务的故障；</string>
    <string name="HiddenPolicyText29">(9) 为合法的新闻报道所必需的；</string>
    <string name="HiddenPolicyText30">(10) 学术研究机构基于公共利益开展统计或学术研究所必要，且对外提供学术研究或描述的结果时，对结果中所包含的个人信息进行去标识化处理的；</string>
    <string name="HiddenPolicyText31">(11) 法律法规规定的其他情形。</string>
    <string name="HiddenPolicyText32">4.2 非识别性信息收集和使用。非识别性信息是指无法用于确定个人身份的信息，例如网站访问量、App下载量、产品销量等。我们会收集汇总的统计信息，目的在于了解用户如何使用我们的产品与服务。
        借此，我们可以改善自己的服务，更好地满足用户需求。我们可能会自行决定出于其他目的收集、使用、披露、转移非识别性信息。</string>
    <string name="HiddenPolicyText33">5. 联系我们</string>
    <string name="HiddenPolicyText34">如果您对本隐私政策有任何疑问、意见或投诉，可邮件至我们开发者邮箱：kefu@jiangxiatech.com</string>
    <string name="ClickOperate1">由于系统限制，无法直接通过金舟录屏开启“显示点击位置”功能。如果您仍然需要在录制时展示点击位置，可以通过手机设置开启，方法如下（不同设备的开启路径可能不同）：</string>
    <string name="ClickOperate2">第一步：在手机的【设置】或【更多设置】页面点击【开发者选项】</string>
    <string name="ClickOperate3">第二步：在【开发者选项】中找到并开启【显示点按操作反馈】</string>
    <string name="ClickOperate4">如果您的设备上没有开发者选项，需要先启用开发者模式，启用方法：</string>
    <string name="ClickOperate5">在手机的【设置】页面点击【关于手机】或【我的设备】，进入【软件信息】，然后连续点击【版本号】点击5次左右，系统即提示“您现在处于开发者模式”。返回【设置】页面后，即可看到【开发者选项】。</string>
    <string name="ClickOperate6">注意，【版本号】不是指【Android版本】，不同设备可能不同，例如小米设备上为【MIUI版本】，三星设备上为【编译编号】</string>
    <string name="first_start_title">服务协议和隐私政策</string>
    <string name="first_start_content1">请您务必审慎阅读、充分理解“用户协议”和“隐私政策”各条款，包括但不限于：</string>
    <string name="first_start_content2">为了向您提供录屏功能、内容分享等服务，我们需要收集您的设备信息、操作日志等信息。您可以在“设置”中查看、变更、删除个人信息并管理您的授权。</string>
</resources>