<?xml version="1.0" encoding="utf-8"?>
<!--设置界面不够大可滚动观看-->
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ActivityHiddenPolicy">
                   <!--        标题栏-->
        <LinearLayout style="@style/top_title_style"
            android:background="#F75F1D">
            <!-- 返回按钮 -->
            <LinearLayout
                android:id="@+id/hidden_policy_back"
                android:layout_width="40dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="16dp"
                    android:background="@drawable/backicon"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <!-- 标题 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="隐私政策"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />
            <Button
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@null" />
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
                                <!-- 文本说明-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="19dp"
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19.5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/HiddenPolicyTitle"
            android:textStyle="bold"
            android:textColor="#222222"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/HiddenPolicyText"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/HiddenPolicyText2"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/HiddenPolicyText3"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText4"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText5"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText6"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText7"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText8"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText9"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText10"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText11"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText12"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText13"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText14"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText15"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText16"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText17"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText18"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText19"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText20"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/HiddenPolicyText21"
            android:textColor="#222222"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText22"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText23"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText24"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText25"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText26"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText27"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText28"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText29"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText30"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HiddenPolicyText31"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText32"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText33"
            android:textColor="#222222"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/HiddenPolicyText34"
            android:textColor="#222222"
            android:textSize="12dp" />
    </LinearLayout>
    </ScrollView>
    </LinearLayout>