<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.ActivityAboutUs">
    <LinearLayout
        android:id="@+id/click_title"
        style="@style/top_title_style"
        android:background="#F75F1D">
        <LinearLayout
            android:id="@+id/btn_click_back"
            android:layout_width="40dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="9dp"
                android:layout_height="16dp"
                android:background="@drawable/backicon"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                />
        </LinearLayout>
        <!-- 标题 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/click_operate"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />
        <Button
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@null" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_describe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/click_title"
        android:text="@string/ClickOperate1"
        android:textColor="#222222"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_describe2"
        android:layout_below="@+id/tv_describe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ClickOperate2"
        android:textColor="#222222"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_describe3"
        android:layout_below="@+id/tv_describe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ClickOperate3"
        android:textColor="#222222"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_describe4"
        android:layout_below="@+id/tv_describe3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ClickOperate4"
        android:textColor="#222222"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_describe5"
        android:layout_below="@+id/tv_describe4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ClickOperate5"
        android:textColor="#222222"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_describe6"
        android:layout_below="@+id/tv_describe5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ClickOperate6"
        android:textColor="#222222"
        android:textSize="12sp"/>
</RelativeLayout>