<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">
    <TextView
        android:text="@string/first_start_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/TestColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/content1"
            android:text="@string/first_start_content1"
            android:layout_centerHorizontal="true"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/TestColor"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_start_content2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:textColor="@color/TestColor"
            android:layout_below="@+id/content1"/>
        <TextView
            android:id="@+id/content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/TestColor"
            android:layout_below="@+id/content2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"/>
        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_below="@+id/content3"
            android:layout_marginTop="15dp"
            android:background="@color/grey"
            android:layout_gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_start_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="暂不使用"
            android:textSize="16dp"
            android:textColor="#999999"
            android:background="@drawable/btn_no"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_start_certain"
            android:layout_width="0dp"
            android:text="同意"
            android:textColor="@color/orange"
            android:textSize="16dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ok"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
